[package]
name = "gemini-server"
version = "0.1.0"
edition = "2024"
authors = ["ericman2001"]
license = "MIT"
description = "A minimal Gemini Protocol server written in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1"
url = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = "0.11"
thiserror = "1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
