[package]
name = "gemini-server"
version = "0.1.0"
edition = "2021"
authors = ["ericman2001"]
license = "MIT"
description = "A minimal Gemini Protocol server written in Rust"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
rustls-pemfile = "2"
url = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = "0.14"
thiserror = "1"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
